--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -18,13 +18,28 @@ html
 		a
 			color: inherit
 			text-decoration: none
+		.section-title
+			color: #4664A2
+			font-size: 36px
+			margin-top:  2px
+			margin-bottom: 15px
+			float: center
+			font-family: inherit
+			font-weight: bold
+			line-height: 1.1
+		.welcome-title
+			color: #4664A2
+			font-size: 18px
+			margin-top:  2px
+			font-family: inherit
+			line-height: 1.1
 		.title
 			color: #4664A2
 			font-size: 24px
 			margin-top:  2px
 			margin-bottom: 10px
 			font-family: inherit
-			font-weight: bold
+			wont-weight: bold
 			line-height: 1.1
 		.hidden
 			display: none
