--- a/app/views/student_application_form/review_personal_data_step.html.erb
+++ b/app/views/student_application_form/review_personal_data_step.html.erb
@@ -1,5 +1,5 @@
 <div class="align-right">
-<a href="<%="#{RELATIVE_URL}/review_dashboard/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button primary'>Close</button></a>
+<a href="<%="#{RELATIVE_URL}/review_dashboard_before/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button primary'>Close</button></a>
 
 </div>
 <div class="student-application-form">
@@ -78,7 +78,7 @@
                 <%= link_to "<button  class='custom-button'> Next > </button>".html_safe, "#{RELATIVE_URL}/review_student_application_form/#{params[:user]}" + "/#{params[:step].to_i + 1}"%>
             <%end%>
             <%if params[:step].to_i == 6 %>
-                <%= link_to "<button  class='custom-button'> Finish </button>".html_safe, "#{RELATIVE_URL}/review_dashboard/#{params[:user]}" %>
+                <%= link_to "<button  class='custom-button'> Finish </button>".html_safe, "#{RELATIVE_URL}/review_dashboard_before/#{params[:user]}" %>
             <%end%>
         </div>
     </br>
