--- a/app/views/student_application_form/review_student_application_form.html.erb
+++ b/app/views/student_application_form/review_student_application_form.html.erb
@@ -1,5 +1,5 @@
 <div class="align-right">
-<a href="<%="#{RELATIVE_URL}/review_dashboard/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button primary'> Close</button></a>
+<a href="<%="#{RELATIVE_URL}/review_dashboard_before/#{params[:user]}"%>" class="back-to-dashboard"><button class='custom-button primary'> Close</button></a>
 
 </div>
 <div class="student-application-form">
