--- a/app/views/user_mailer/finished_application_mail_to_admins.html.erb
+++ b/app/views/user_mailer/finished_application_mail_to_admins.html.erb
@@ -558,7 +558,7 @@
                     <table border="0" cellpadding="0" cellspacing="0">
                       <tbody>
                       <tr>
-                        <td> <a href="<%= @url %>/review_dashboard/<%= @user.id%>" target="_blank">Review</a> </td>
+                        <td> <a href="<%= @url %>/review_dashboard_before/<%= @user.id%>" target="_blank">Review</a> </td>
                       </tr>
                       </tbody>
                     </table>
