--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -8,7 +8,8 @@
 	<br/><br/>
 	<p class="no-results">You do not have permission to access this page</p>
 <% else %>
-	<h1 class="title"> Hi, <%= current_user.first_name %></h1>
+	<h1 class="section-title"> Before the mobility </h1>
+	<h1 class="welcome-title"> Hi, <%= current_user.first_name %></h1>
 	<% if current_user.progress_status == "in_process" %>
 		<p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong><%= settings.deadline_first_semeter %> </strong> </span> for the fall semester or academic year <%= settings.next_academic_year %> and <span class="red"><strong><%= settings.deadline_second_semester %> </strong></span> for the second semester of the academic year <%= settings.current_academic_year %>. For double degree students, the deadline is <span class="red"><strong><%= settings.deadline_double_degree %> </strong></span>. Please <u>complete your application package before the deadline</u> with the required documents in PDF. You can find all the information regarding the application process and course catalogue as well as useful information about accommodation and transport in the <a class="international-office-link" target="_blank" href="http://www.etsit.upm.es/de/international-office/studying-at-etsit-upm/how-to-apply.html">webpage of the international office</a>.</p>
 		<p class="intro-paragraph"><span class="red">(*) Required file or data</span> </p>
