After delete not working & review user view

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -114,6 +114,8 @@ html
 			padding: 10px		
 		.align-right
 			text-align: right
+		.align-center
+			text-align: center
 		form.inline
 			display: inline-block
 		.s12
