--- a/app/views/student_application_form/student_application_form.html.erb
+++ b/app/views/student_application_form/student_application_form.html.erb
@@ -5,7 +5,7 @@
     <div class="align-right">
 
       <% if params.has_key?(:from_ball) %>
-        <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
+        <a href="<%=user_dashboard_before_path%>" class="back-save-dashboard">
           <button class='custom-button right'>Close</button>
         </a>
 
