--- a/app/views/users/review_dashboard.html.erb
+++ b/app/views/users/review_dashboard.html.erb
@@ -37,9 +37,29 @@
 				<div class="second-container">
 				<span class="second-container-left dashboard-section" id="before-the-mobility-tab">
 					<span class="red">&nbsp; </span>
-					<a href="<%="#{RELATIVE_URL}/review_dashboard_before/#{params[:user]}"%>">
+					<a href="<%="#{RELATIVE_URL}/review_dashboard/#{params[:user]}/before"%>">
 						<label>
 						Before the Mobility<i class="caret mdi mdi-menu-down reverse"></i>
+						</label>
+					</a>
+				</span>
+				</div>
+				<div class="second-container">
+					<span class="second-container-left dashboard-section" id="during-the-mobility-tab">
+						<span class="red">&nbsp; </span>
+						<a href="<%="#{RELATIVE_URL}/review_dashboard/#{params[:user]}/during"%>">
+							<label>
+							During the Mobility<i class="caret mdi mdi-menu-down reverse"></i>
+							</label>
+						</a>
+					</span>
+				</div>
+				<div class="second-container">
+				<span class="second-container-left dashboard-section" id="before-the-mobility-tab">
+					<span class="red">&nbsp; </span>
+					<a href="<%="#{RELATIVE_URL}/review_dashboard/#{params[:user]}/after"%>">
+						<label>
+						After the Mobility<i class="caret mdi mdi-menu-down reverse"></i>
 						</label>
 					</a>
 				</span>
