--- a/app/views/student_application_form/personal_data_step.html.erb
+++ b/app/views/student_application_form/personal_data_step.html.erb
@@ -4,10 +4,10 @@
   <%= form_for(@user, url: student_application_form_personal_data_path(:from_ball => from_ball), method: :post) do |f| %>
     <% if params.has_key?(:from_ball) %>
     <div class="align-right">
-      <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
+      <a href="<%=user_dashboard_before_path%>" class="back-save-dashboard">
         <button class='custom-button right'>Close</button>
       </a>
-      <a href="<%=user_dashboard_path%>" class="back-save-dashboard">
+      <a href="<%=user_dashboard_before_path%>" class="back-save-dashboard">
         <button class='custom-button primary right'>Save & Close</button>
       </a>
     </div>
