--- a/app/views/users/user_dashboard_before.html.erb
+++ b/app/views/users/user_dashboard_before.html.erb
@@ -8,7 +8,21 @@
 	<br/><br/>
 	<p class="no-results">You do not have permission to access this page</p>
 <% else %>
-	<h1 class="section-title"> Before the mobility </h1>
+	<div class="align-center">
+        <% if current_user.progress_status.include? "after"%>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary'>Before the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/during"%>"><button class='custom-button primary'>During the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/after"%>"><button class='custom-button primary'>After the Mobility</button></a>
+        <% elsif current_user.progress_status.include? "during"%>%>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary'>Before the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/during"%>"><button class='custom-button primary'>During the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/after"%>"><button class='custom-button primary' disabled>After the Mobility</button></a>
+        <% else%>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/before"%>"><button class='custom-button primary'>Before the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/during"%>"><button class='custom-button primary' disabled>During the Mobility</button></a>
+            <a href="<%="#{RELATIVE_URL}/user_dashboard/after"%>"><button class='custom-button primary' disabled>After the Mobility</button></a>
+        <% end %>
+    </div>
 	<h1 class="welcome-title"> Hi, <%= current_user.first_name %></h1>
 	<% if current_user.progress_status == "in_process" %>
 		<p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong><%= settings.deadline_first_semeter %> </strong> </span> for the fall semester or academic year <%= settings.next_academic_year %> and <span class="red"><strong><%= settings.deadline_second_semester %> </strong></span> for the second semester of the academic year <%= settings.current_academic_year %>. For double degree students, the deadline is <span class="red"><strong><%= settings.deadline_double_degree %> </strong></span>. Please <u>complete your application package before the deadline</u> with the required documents in PDF. You can find all the information regarding the application process and course catalogue as well as useful information about accommodation and transport in the <a class="international-office-link" target="_blank" href="http://www.etsit.upm.es/de/international-office/studying-at-etsit-upm/how-to-apply.html">webpage of the international office</a>.</p>
@@ -99,50 +113,50 @@
 					</div>
 				</div>
 
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :learning_agreement,
 						:current_user => current_user,
 						:content => current_user.learning_agreement,
 						:file_name => current_user.learning_agreement_file_name,
 						:label => "Learning Agreement"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :motivation_letter,
 						:content => current_user.motivation_letter,
 						:file_name => current_user.motivation_letter_file_name,
 						:label => "Motivation Letter" } %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :curriculum_vitae,
 						:content => current_user.curriculum_vitae,
 						:file_name => current_user.curriculum_vitae_file_name,
 						:label => "Curriculum Vitae"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :transcript_of_records,
 						:content => current_user.transcript_of_records,
 						:file_name => current_user.transcript_of_records_file_name,
 						:label => "Transcript of Records"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :valid_insurance_policy,
 						:content => current_user.valid_insurance_policy,
 						:file_name => current_user.valid_insurance_policy_file_name,
 						:label => "Valid Insurance Policy"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :ni_passport,
 						:content => current_user.ni_passport,
 						:file_name => current_user.ni_passport_file_name,
 						:label => "Identity card / Passport"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :english_test_score,
 						:content => current_user.english_test_score,
 						:file_name => current_user.english_test_score_file_name,
 						:label => "English Language Certificate"}  %>
-				<%= render partial: "users/user_dashboard_panel", :locals => {
+				<%= render partial: "users/user_dashboard_before_panel", :locals => {
 						:admin => false,
 						:name => :spanish_test_score,
 						:content => current_user.spanish_test_score,
@@ -150,19 +164,19 @@
 						:label => "Spanish Language Certificate"}  %>
 				<% if current_user.seeking_degree %>
 					<div id="degree-seeking">
-						<%= render partial: "users/user_dashboard_panel", :locals => {
+						<%= render partial: "users/user_dashboard_before_panel", :locals => {
 								:admin => false,
 								:name => :recommendation_letter_1,
 								:content => current_user.recommendation_letter_1,
 								:file_name => current_user.recommendation_letter_1_file_name,
 								:label => "Recommendation letter 1"}  %>
-						<%= render partial: "users/user_dashboard_panel", :locals => {
+						<%= render partial: "users/user_dashboard_before_panel", :locals => {
 								:admin => false,
 								:name => :recommendation_letter_2,
 								:content => current_user.recommendation_letter_2,
 								:file_name => current_user.recommendation_letter_2_file_name,
 								:label => "Recommendation letter 2"}  %>
-						<%= render partial: "users/user_dashboard_panel", :locals => {
+						<%= render partial: "users/user_dashboard_before_panel", :locals => {
 								:admin => false,
 								:name => :official_gpa,
 								:content => current_user.official_gpa,
