--- a/app/views/users/user_dashboard_during.erb
+++ b/app/views/users/user_dashboard_during.erb
@@ -8,7 +8,7 @@
 	<br/><br/>
 	<p class="no-results">You do not have permission to access this page</p>
 <% else %>
-	<h1 class="section-title"> Before the mobility </h1>
+	<h1 class="section-title"> During the mobility </h1>
 	<h1 class="welcome-title"> Hi, <%= current_user.first_name %></h1>
 
 <% end %>
