--- a/app/views/users/review_dashboard_before.html.erb
+++ b/app/views/users/review_dashboard_before.html.erb
@@ -185,15 +185,17 @@
 <%end%>
 </div>
 <p class="intro-paragraph  footer-paragraph s12">
-	<a download href="<%= "#{RELATIVE_URL}/download_all_files/#{current_user.id}" %>"><button class="custom-button primary">Download all files</button></a>
-	<!--	<%#if current_user.progress_status === "accepted" %><a download href="<%#= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}" %>">
-		<button class="custom-button primary">Generate Acceptance Letter</button>
-	</a><%#end%>-->
-	<button id="acceptance-letter-dialog-button" class="custom-button primary">Generate Acceptance Letter</button>
-	<button class="custom-button primary" id="change-status-during-dialog-button">Change status to: During the Mobility</button>
-	<button class="custom-button primary" id="delete-user">Delete user</button>
-	<br/>
-	<span class="registered_at"><b>Registered</b>: <%=current_user.created_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %>. &nbsp; &nbsp;  &nbsp; <b>Last updated:</b>  <%=current_user.updated_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %></span>
+	<div class="align-right">
+		<%= button_to "Change status to: During the Mobility", user_change_status_during_path, :method=> :post, :class => "custom-button primary", params: {user: current_user}%>
+		<a download href="<%= "#{RELATIVE_URL}/download_all_files/#{current_user.id}" %>"><button class="custom-button primary">Download all files</button></a>
+		<!--	<%#if current_user.progress_status === "accepted" %><a download href="<%#= "#{RELATIVE_URL}/generate_acceptance_letter/#{current_user.id}" %>">
+			<button class="custom-button primary">Generate Acceptance Letter</button>
+		</a><%#end%>-->
+		<button id="acceptance-letter-dialog-button" class="custom-button primary">Generate Acceptance Letter</button>
+		<button class="custom-button primary" id="delete-user">Delete user</button>
+		<br/>
+		<span class="registered_at"><b>Registered</b>: <%=current_user.created_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %>. &nbsp; &nbsp;  &nbsp; <b>Last updated:</b>  <%=current_user.updated_at.in_time_zone("Madrid").strftime("%d-%m-%Y %r") %></span>
+	</div>
 </p>
 
 <div id="acceptance-letter-dialog" >
