--- a/app/views/users/user_dashboard_before.html.erb
+++ b/app/views/users/user_dashboard_before.html.erb
@@ -24,7 +24,7 @@
         <% end %>
     </div>
 	<h1 class="welcome-title"> Hi, <%= current_user.first_name %></h1>
-	<% if current_user.progress_status == "in_process" %>
+	<% if current_user.progress_status == "before_in_process" %>
 		<p class="intro-paragraph">We remind you that the deadline to receive your application package is <span class="red"><strong><%= settings.deadline_first_semeter %> </strong> </span> for the fall semester or academic year <%= settings.next_academic_year %> and <span class="red"><strong><%= settings.deadline_second_semester %> </strong></span> for the second semester of the academic year <%= settings.current_academic_year %>. For double degree students, the deadline is <span class="red"><strong><%= settings.deadline_double_degree %> </strong></span>. Please <u>complete your application package before the deadline</u> with the required documents in PDF. You can find all the information regarding the application process and course catalogue as well as useful information about accommodation and transport in the <a class="international-office-link" target="_blank" href="http://www.etsit.upm.es/de/international-office/studying-at-etsit-upm/how-to-apply.html">webpage of the international office</a>.</p>
 		<p class="intro-paragraph"><span class="red">(*) Required file or data</span> </p>
 		<br/>
@@ -225,7 +225,7 @@
 	<%end%>
 	</div>
 	<p class="intro-paragraph  footer-paragraph s12">
-	<% if current_user.role == "user" && current_user.progress_status == "in_process" && current_user.percentage_num.to_i == 100 %>
+	<% if current_user.role == "user" && current_user.progress_status == "before_in_process" && current_user.percentage_num.to_i == 100 %>
 		<%= button_to "Finish Application", user_finish_application_form_path, data: {confirm: "This action will submit your application form and send an email to notify International Office, are you sure?" }, :method=> :post, :class => "custom-button primary ", :form_class => "finish_app" %>
 	<% end %>
 	</p>
